# K-language-model

./: LICENSE  README.md  README_v1.md  RESULTS_V1.md  THIRD_PARTY_NOTICES.md  bench_denoise.py  infer.py  k_lm.py  pyproject.toml  requirements.txt  state_rank_probe.py  train.py
configs/: colab_seed_sweep.sh  colab_seed_sweep_wikitext2_kbase.sh
k_language_model/: __init__.py  checkpoint.py  checkpoint_probe.py  cli_args.py  configs.py  data.py  dataset_loaders.py  dataset_pipeline.py  decay.py  decay_kernel.py  denoise_bench.py  drift_probe.py  generation.py  heads.py  infer_app.py  kbase.py  kstack.py  layers.py  model.py  model_factory.py  model_utils.py  rosa.py  rosa_backends.py  rosa_ext.cpp  runtime.py  state_rank_probe.py  tokenizers.py  train_app.py  trainer.py  ui_app.py  ui_backend.py
k_operators/: checkpoint.py  model.py  runtime.py
models/tiny-shakespeare/v2/: byte_shakespeare_v2.pt  byte_shakespeare_v2_rosa_off.pt  char_shakespeare_v2.pt  char_shakespeare_v2_rosa_cpp.pt  char_shakespeare_v2_rosa_off.pt
tests/: test_checkpoint.py  test_data_tokenizers.py  test_model_alpha_vector.py  test_model_decay_block.py  test_model_rosa_k2.py  test_model_v2.py  test_rosa.py  test_sequence_prediction.py  test_sequence_prediction_stats.py  test_store_sales_data.py  test_store_sales_splits.py  test_ui_backend.py
