[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k-language-model"
version = "0.1.0"
description = "K-Stack token-level language model"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "numpy>=1.20,<2",
  "sentencepiece>=0.2",
  "torch>=2.1",
]

[project.optional-dependencies]
ui = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
k-lm-train = "k_language_model.train_app:main"
k-lm-infer = "k_language_model.infer_app:main"
k-lm-kstats = "k_language_model.kstats_app:main"
k-lm-bench-denoise = "k_language_model.denoise_bench:main"
k-lm-sequence-predict = "k_language_model.sequence_prediction:main"
k-lm-sequence-stats = "k_language_model.sequence_prediction_stats:main"
k-lm-ui = "k_language_model.ui_app:main"

[tool.setuptools]
packages = ["k_language_model"]
